fixed cutoff text

--- a/src/pages/integrations/wallet-connect/wallet-connect.scss
+++ b/src/pages/integrations/wallet-connect/wallet-connect.scss
@@ -58,6 +58,7 @@ page-wallet-connect {
         font-size: 20px;
         line-height: 18px;
         font-weight: 500;
+        padding-bottom: 2px;
       }
       .item {
         &.item-ios,
